Fixed keywords in lexical, fixed scope variable in syntax and semantic analysis